--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ backend/__pycache__/
 # C extensions
 *.so
 
+
 */migrations/*
 !*/migrations/__init__.py
 # Distribution / packaging
@@ -167,3 +168,6 @@ media/historicos
 /load_test/final.csv
 /load_test/output.csv
 /load_test/files/*
+
+# Coverage
+.coveragerc
