--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   backend:
     build:
       context: .
-    container_name: backend
+    container_name: projetin-backend
     command: >
       /bin/sh -c "python3 manage.py makemigrations &&
                   python3 manage.py migrate &&
@@ -11,18 +11,16 @@ services:
     volumes:
       - .:/projetin
     ports:
-      - "8000:8000"
+      - "8000:8000"  # Expose port 8000 for the backend
     environment:
       - DEBUG=1
       - DB_NAME=postgres
       - DB_USER=postgres
       - DB_PASSWORD=postgres
-      - DB_HOST=db
-      - DB_PORT=5433
+      - DB_HOST=db  # Keep 'db' for internal service communication
+      - DB_PORT=5432
     depends_on:
       - db
-    networks:
-      - app-network
 
   db:
     image: postgres:15
@@ -34,14 +32,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
-      - "5433:5432"
-    networks:
-      - app-network
-
-
-networks:
-  app-network:
-    driver: bridge
+      - "5432:5432"  # Expose PostgreSQL on port 5432
 
 volumes:
   postgres_data:
